--- a/proses/index.html
+++ b/proses/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>GIVEAWAY</title>
-<meta http-equiv="refresh" content="0;url=https://wentq.blogspot.com/?fbclid=smart_com/?action=register&sub_id=pfbid02kkCinuDxPctsne5d8e6LREJbsTyCPDjSG7dgfHN2iMcN5SFqzxhsufwKC5JtsgRTl">
+<meta http-equiv="refresh" content="0;url=">
 <style>
 * {
 margin: 0;
